--- a/CrowdFunding/home/templates/home/index.html
+++ b/CrowdFunding/home/templates/home/index.html
@@ -1,95 +1,303 @@
+{% extends "home/base.html" %}
 {% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    {% comment %} <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"> {% endcomment %}
-    <link rel="stylesheet" type="text/css" href="{% static 'home/css/bootstrap.css' %}">
-    <title>Document</title>
-</head>
-<body>
-{% block body %}
-    {% block header %}
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="{% url 'index' %}">Crowd Funding</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    {%if user.is_authenticated%}
-    <div class="collapse navbar-collapse" id="navbarNavDropdown">
-      <ul class="navbar-nav">
-      
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Projects</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#" >Categories</a>
-        </li>
-      </ul>
-      
-       {% comment %} <form class="d-flex justify-content-end">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Search</button>
-      </form> {% endcomment %}
-    </div>
-    <ul class="d-flex  navbar-nav justify-content-end">
-        <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                {{ user.username }}
-            </a>
-            <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                <a class="dropdown-item" href="#">My account</a>
-                <a class="dropdown-item" href="#">Change password</a>
-                <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="{% url 'logout' %}">Log out</a>
-            </ul>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="#" ></a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="#" ></a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="#" ></a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="#" ></a>
-        </li>
-         </li>
-        <li class="nav-item">
-            <a class="nav-link" href="#" ></a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="#" ></a>
-        </li>
-    </ul>
-    {%else%}
-    <ul class="d-flex  navbar-nav justify-content-end">
-        <li class="nav-item">
-            <a class="nav-link" href="{% url 'login' %}" >login</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="{% url 'signup' %}">Sign Up</a>
-        </li>
-    </ul>
-    {%endif%}
-  </div>
-</nav>
-    {% endblock %}
-
-    {% block content1 %}
-    {% endblock %}
-
-    {% block footer %}
-    {% endblock %}
+{% block head-css %}
+    
 {% endblock %}
-<script src="{% static 'home/jquery-3.6.0.min.js' %}"></script>
-<script src="{% static 'home/js/bootstrap.bundle.js' %}"></script>
-</body>
-</html>
+{% load bootstrap4 %}
+{% bootstrap_css %}
+{% bootstrap_javascript jquery='full' %}
+{% block content %}
+<style>
+/* The alert message box */
+.alert {
+  padding: 20px;
+  background-color: #f44336; /* Red */
+  color: white;
+  margin-bottom: 15px;
+}
+
+/* The close button */
+.closebtn {
+  margin-left: 15px;
+  color: white;
+  font-weight: bold;
+  float: right;
+  font-size: 22px;
+  line-height: 20px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+/* When moving the mouse over the close button */
+.closebtn:hover {
+  color: black;
+}
+.slideCss {
+    width: 100%;
+    height: 380px;
+}
+
+.slide_show {
+    width: 100%;
+}
+
+.latestproject {
+    margin-top: 2%;
+}
+
+.fproject {
+    margin-top: 2%;
+    width: 18%;
+    margin-left: 2%;
+}
+
+.desc {
+    max-lines: 1;
+    line-height: 20px;
+    max-height: 20px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.projImg {
+    width: 100%;
+    height: 170px;
+}
+
+.subTitle {
+    margin-top: 5%;
+    margin-left: 35%;
+    font-style: oblique;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: #3a6073;
+}
+
+hr {
+    width: 120px;
+    margin-top: 10px;
+    margin-left: 43%;
+    background-color: #16222A;
+}
+
+.categs {
+    width: 12%;
+    height: 12%;
+    margin: 3%;
+}
+
+.sliderTitle {
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-size: 50px;
+    font-style: bold;
+}
+
+.sliderDesc {
+    font-family: initial;
+    font-size: 25px;
+    font-style: oblique;
+    max-lines: 1;
+    line-height: 30px;
+    max-height: 60px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    
+}
+</style>
+    {% comment %} <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+    {% if highRatedProjects %}
+            <div class="carousel-inner" >
+        {% for p in highRatedProjects %}
+          {% if forloop.counter == 1 %}
+                <div class="carousel-item slideCss active" >
+                     <a href="project/{{p.id}}"> <img src="/media/{{pics|get_item:p.id }}" class="d-block slideCss"></a>
+                      <div class="carousel-caption d-none d-md-block">
+                        <h5 class="sliderTitle" >{{p.title}}  </h5>
+                        <h5 class="sliderTitle" >{{p.total_target}}  </h5>
+                        <p class="sliderDesc"> {{p.details}}</p>
+                        
+                      </div>
+                </div>
+                {% else %}
+                <div class="carousel-item slideCss" >
+                    <a href ="project/{{p.id}}">  <img src="/media/{{pics|get_item:p.id}}" class="d-block slideCss">
+                      </a>
+                      <div class="carousel-caption d-none d-md-block">
+                    
+                        <h5 class="sliderTitle">{{p.title}} </h5>
+                        <h5 class="sliderTitle" >{{p.total_target}}  </h5>
+                        <p class="sliderDesc"> {{p.details}} </p>
+                    
+                      </div>
+                </div>
+                {% endif %}
+              {% endfor %}
+
+         {%else%}
+                {% if 'search' not in request.path %}
+                 <div class="col-md-12">highest five not available</div>
+        {% endif %}
+      {% endif %}
+        </div>
+    </div> {% endcomment %}
+   
+  {% comment %} <div class="container">
+    <div class="row">
+      <div class="row col-md-12 mt-4">
+        <form class="row col-12 example text-center" action="{% url 'search' %}">
+          <div class="offset-3 col-5 row">
+            <input class="col-12" id="search_input" name="search" type="text" placeholder="Search.." name="search">
+          </div>
+          <div class="col-2 row">
+            <button class="col-12" id="search_btn" type="submit"><i class="fa fa-search"></i></button>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+
+  <!--start of search-->
+  <section id="projects_search" class="py-4">
+    <div class="container">
+      <div class="row">
+        {% if projects_search %}
+          {% for project in projects_search %}
+            <div class="col-md-6 col-lg-4 mb-4">
+              <div class="card" >
+                  <img class="card-img-top" src=" /media/{{pics|get_item:project.id}} " alt="image not available">
+
+                <div>
+                  <h2>
+                    <span class="badge badge-secondary text-white">{{ project.total_target }} L.E</span>
+                  </h2>
+                </div>
+                <div class="card-body">
+                  <div class="text-center">
+                    <h5 class="text-primary">{{ project.title }}</h5>
+                    <h6 class="text-primary">Owner: {{ project.user.first_name }}</h6>
+                    <p>Category: {{ project.category.title }}</p>
+                  </div>
+                  <hr>
+                  <div class="row py-1 text-secondary">
+                    <div class="col-6">
+                      <div>Start</div>
+                      <div>{{ project.start_date }}</div>
+                    </div>
+                    <div class="col-6">
+                      <div>End</div>
+                      <div>{{ project.end_date }}</div>
+                    </div>
+                  </div>
+                  <hr>
+                  <a href="project/{{project.id}}" class="btn btn-primary btn-block">More
+                    Info</a>
+                </div>
+              </div>
+            </div>
+          {% endfor %}  
+        {% else %}
+  {% if 'search'  in request.path %}
+        
+        <div class="alert">
+        <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
+        your search key word doesn't match any projects !
+        </div>    
+  {% endif %}
+
+        {% endif %}
+      </div>
+    </div>
+  </section>
+ 
+  <!--end of search-->
+  {% if 'search' not in request.path %}
+
+    <h1 class="subTitle">  Latest Projects</h1> 
+    <hr>
+
+    <div class="row">
+    {% if latestFiveList %}
+        {% for p in latestFiveList %}
+        {% if forloop.counter  != 2 and forloop.counter  <= 3 %}
+            <div class="col-md-3 latestproject">
+                <div class="card cardDes">
+                 <a href= "project/{{p.id}}">   
+                    <img src="/media/{{pics|get_item:p.id}}" class="card-img-top projImg"> </a>
+                    <div class="card-body">
+                      <h5 class="card-title">{{ p.title }}</h5>
+                      <p class="card-text desc">{{p.details }}</p>
+                      <p class="card-text">{{p.total_target }} L.E</p>
+                    </div>
+                </div>
+            </div>
+        {% elif forloop.counter == 2 %}
+            <div class="col-md-3 latestproject">
+                <div class="card cardDes">
+                  <a href= "project/{{p.id}}">
+                  <img src="/media/{{pics|get_item:p.id}}" class="card-img-top projImg"> </a>
+                    <div class="card-body"> 
+                      <h5 class="card-title">{{p.title }}</h5>
+                      <p class="card-text desc">{{p.details }}</p>
+                      <p class="card-text">{{p.total_target }} L.E</p>
+
+                    </div>
+                </div>
+            </div>
+            {% elif forloop.counter > 3 %}
+            <div class="col-md-3 latestproject">
+                <div class="card cardDes">
+                     <a href= "project/{{p.id}}"> 
+                      <img src="/media/{{pics|get_item:p.id}}" class="card-img-top projImg"> </a>
+                    <div class="card-body">
+                      <h5 class="card-title">{{p.title }}</h5>
+                      <p class="card-text desc">{{p.details }}</p>
+                      <p class="card-text">{{p.total_target }} L.E</p>
+
+                    </div>
+                </div>
+            </div>
+        {% endif %}
+        {% endfor %}
+    {% else %}
+          {% if 'search' not in request.path %}
+            <h1>No Projects Available</h1>
+          {% endif %}
+    {% endif %}
+  {% endif %} 
+    
+    </div>
+
+{% if 'search' not in request.path %}
+
+    <h1 class="subTitle"> Featured Projects</h1> 
+    <hr>
+
+    <div class="row">
+        {% for fproject in featuredList %}
+            <div class="fproject">
+                <div class="card cardDes">
+                    <a href= "project/{{fproject.id}}"> 
+                    <img src="/media/{{pics|get_item:fproject.id}}" style ="width:170px ,height:230px " class="card-img-top projImg"> </a>
+                    <div class="card-body">
+                      <h5 class="card-title">{{fproject.title }}</h5>
+                      <p class="card-text desc">{{fproject.details }}</p>
+                      <p class="card-text desc">{{fproject.total_target }} L.E</p>
+                    </div>
+                </div>
+            </div>
+        {% endfor %}
+    </div>  
+{%endif%}
+{% if 'search' not in request.path %}
+       <h1 class="subTitle"> Our Categories </h1> 
+    <hr>
+    <div class="row">
+        {% for c in categories %}
+            <div class="categs">
+                <a href="{% url 'show_cate' c.id %}">
+                <h5 class="card-title" style="text-align: center;">{{c.title }}</h5>
+            </div>
+        {% endfor %}
+    </div>
+{%endif%} {% endcomment %}
+       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+{% endblock %}
