--- a/CrowdFunding/pusers/templates/pusers/register.html
+++ b/CrowdFunding/pusers/templates/pusers/register.html
@@ -1,45 +1,43 @@
 {% extends "home/base.html" %}
-{% block title %}Login{% endblock %}
+{% block title %}Register{% endblock %}
 {% load bootstrap4 %}
 {% block content %}
-
-{% comment %} <div class="container" style="margin-top: 30px;">
+<div class="container" style="margin-top: 30px;">
     <form method="post" enctype="multipart/form-data">
         {%csrf_token%}
         {% bootstrap_form form %}
         {% buttons %}
         <button type="submit" class="btn btn-primary">
-            Login
+            Sign Up
         </button>
         {% endbuttons %}
         <form>
-</div> {% endcomment %}
+</div> 
 
-
-<div class="container">
+{% comment %} <div class="container">
     <h1 class="text-center logo my-4">
-      <a href="#">Crowd Funding SignIn</a>
+      <a href="#">Crowd Funding SignUp</a>
     </h1>
     <div class="row justify-content-center">
       <div class="col-lg-8 col-md-10 col-sm-12">
         <div class="card">
           <div class="card-body">
-            <h3 class="card-title row justify-content-center">Login</h3>
+            <h3 class="card-title row justify-content-center">Sign up</h3>
             <form method="post" novalidate>
               {% csrf_token %}
               {% include 'includes/form.html' %}
-              <button type="submit" class="btn btn-primary btn-block">Login</button>
+              <button type="submit" class="btn btn-primary btn-block">Create an account</button>
             </form>
           </div>
           <div class="card-footer text-muted text-center">
-            Create New account <a href="{%url 'pusers:register'%}">Sign up </a>
+            Already have an account? <a href="{%url 'pusers:login'%}">Log in</a>
           </div>
         </div>
       </div>
     </div>
-  </div>
-
-
+  </div> {% endcomment %}
 
 {% endblock content %}
 
+
+  
