upload images to project & tags,Dispaly project with id,handle unique image name

--- a/CrowdFunding/projects/templates/projects/add.html
+++ b/CrowdFunding/projects/templates/projects/add.html
@@ -49,6 +49,10 @@
             <label for="">images</label>
             <input type="file" name="images" accept="image/*" multiple>
         </div>
+        <div>
+            <label for="">Tags</label>
+            <input type="text" name="tags">
+        </div>
        
         <input type="submit" value="submit">
     </form>
