--- a/CrowdFunding/projects/templates/projects/view.html
+++ b/CrowdFunding/projects/templates/projects/view.html
@@ -6,6 +6,7 @@
             <th>category</th>
             <th>total target</th>
             <th>images</th>
+            <th>Tags</th>
         </tr>
     </thead>
     <tbody>
