--- a/CrowdFunding/projects/templates/projects/add.html
+++ b/CrowdFunding/projects/templates/projects/add.html
@@ -13,37 +13,42 @@
             <label for="">
                 title
             </label>
-            <input type="text" name="title">
+            <input type="text" name="title" value="{{new_project.title}}">
+            <p style="color: red;">{{new_project.errors.title}}</p>
         </div>
         <div>
             <label for="">
                 details
             </label>
-            <input type="text" name="details">
+            <input type="text" name="details" value="{{new_project.details}}">
+            <p style="color: red;">{{new_project.errors.details}}</p>
         </div>
         <div>
             <label for="">
                 category
             </label>
-            <input type="text" name="category">
+            <input type="text" name="category" value="{{new_project.category}}">
+            <p style="color: red;">{{new_project.errors.category}}</p>
         </div>
         <div>
             <label for="">
                 total_target
             </label>
-            <input type="number" name="total_target">
+            <input type="number" name="total_target" value="{{new_project.total_target}}">
+            <p style="color: red;">{{new_project.errors.total_target}}</p>
         </div>
         <div>
             <label for="">
                 start_date
             </label>
-            <input type="date" name="s_date">
+            <input type="date" name="s_date" value="{{new_project.start_date}}">
         </div>
         <div>
             <label for="">
                 end_date
             </label>
-            <input type="date" name="e_date">
+            <input type="date" name="e_date" value="{{new_project.end_date}}">
+            <p style="color: red;">{{new_project.errors.date}}</p>
         </div>
         <div>
             <label for="">images</label>
