--- a/CrowdFunding/reports/templates/reports/create_comment.html
+++ b/CrowdFunding/reports/templates/reports/create_comment.html
@@ -1,9 +1,9 @@
-{%  block content %}
+{% block content %}
 
-<form action="{% url 'create_report_comment' %}" method="post" >
-{% csrf_token %}
-{{ form.as_p }}
-<button type="submit">Report </button>
+<form action="{% url 'create_report_comment' projectId commentId %}" method="post">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <button type="submit">Report </button>
 </form>
 
-{%  endblock content %}
+{% endblock content %}
