update index & create & edit ui

--- a/CrowdFunding/projects/templates/projects/add.html
+++ b/CrowdFunding/projects/templates/projects/add.html
@@ -1,73 +1,72 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Add new project</title>
-</head>
-<body>
-    <form action="{% url 'newProject' %}" method="POST" enctype="multipart/form-data">
-        {% csrf_token %}
-        <div>
-            <label for="">
-                title
-            </label>
-            <input type="text" name="title" value="{{new_project.title}}">
-            <p style="color: red;">{{new_project.errors.title}}</p>
+{% extends 'home/base.html' %}
+{% load static %}
+{% block content %}
+<div class="container mt-2">
+    <h2>Add New Project</h2>
+    <div class="card my-3">
+        <div class="card-body">
+            <form action="{% url 'newProject' %}" method="POST" enctype="multipart/form-data">
+                {% csrf_token %}
+                <div class="form-group">
+                    <label for="">
+                        Title
+                    </label>
+                    <input class="form-control" type="text" name="title" value="{{new_project.title}}">
+                    <p style="color: red;">{{new_project.errors.title}}</p>
+                </div>
+                <div class="form-group">
+                    <label for="">
+                        Details
+                    </label>
+                    <input class="form-control" type="text" name="details" value="{{new_project.details}}">
+                    <p style="color: red;">{{new_project.errors.details}}</p>
+                </div>
+                <div class="form-group">
+                    <label for="">
+                        Category
+                    </label>
+                    <select class="form-control" name="category" >
+                        {% for cat in category %}
+                            <option value="{{cat.id}}" {% if cat.id == new_project.category.id %}
+                                    selected
+                                {% endif %} >
+                                    {{cat.name}}
+                            </option>
+                        {% endfor %}
+                    </select>
+                </div>
+                <div class="form-group">
+                    <label for="">
+                        Total Target
+                    </label>
+                    <input class="form-control" type="number" name="total_target" value="{{new_project.total_target}}">
+                    <p style="color: red;">{{new_project.errors.total_target}}</p>
+                </div>
+                <div class="form-group">
+                    <label for="">
+                        Start Date
+                    </label>
+                    <input class="form-control" type="date" name="s_date" value="{{new_project.start_date}}">
+                </div>
+                <div class="form-group">
+                    <label for="">
+                        End Date
+                    </label>
+                    <input class="form-control" type="date" name="e_date" value="{{new_project.end_date}}">
+                    <p style="color: red;">{{new_project.errors.date}}</p>
+                </div>
+                <div class="form-group">
+                    <label for="">Images | select multiple image</label>
+                    <input class="form-control" required type="file" name="images" accept="image/*" multiple>
+                </div>
+                <div class="form-group">
+                    <label for="">Tags</label>
+                    <input class="form-control" required type="text" name="tags">
+                </div>
+               
+                <input class="btn btn-success btn-block" type="submit" value="Create">
+            </form>
         </div>
-        <div>
-            <label for="">
-                details
-            </label>
-            <input type="text" name="details" value="{{new_project.details}}">
-            <p style="color: red;">{{new_project.errors.details}}</p>
-        </div>
-        <div>
-            <label for="">
-                category
-            </label>
-            <select name="category" >
-                {% for cat in category %}
-                    <option value="{{cat.id}}" {% if cat.id == new_project.category.id %}
-                            selected
-                        {% endif %} >
-                            {{cat.name}}
-                    </option>
-                {% endfor %}
-            </select>
-        </div>
-        <div>
-            <label for="">
-                total_target
-            </label>
-            <input type="number" name="total_target" value="{{new_project.total_target}}">
-            <p style="color: red;">{{new_project.errors.total_target}}</p>
-        </div>
-        <div>
-            <label for="">
-                start_date
-            </label>
-            <input type="date" name="s_date" value="{{new_project.start_date}}">
-        </div>
-        <div>
-            <label for="">
-                end_date
-            </label>
-            <input  type="date" name="e_date" value="{{new_project.end_date}}">
-            <p style="color: red;">{{new_project.errors.date}}</p>
-        </div>
-        <div>
-            <label for="">images</label>
-            <input required type="file" name="images" accept="image/*" multiple>
-        </div>
-        <div>
-            <label for="">Tags</label>
-            <input required type="text" name="tags">
-        </div>
-       
-        <input type="submit" value="submit">
-    </form>
-    
-</body>
-</html>
+    </div>
+</div>
+{% endblock %}
