--- a/CrowdFunding/home/templates/home/base.html
+++ b/CrowdFunding/home/templates/home/base.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css"> 
     <link rel="stylesheet" type="text/css" href="{% static 'css/rating.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static '/projects/css/custom.css' %}">
     <script src="{% static 'js/rating.js' %}"></script>
     <!-- project_page scripts end -->
     {% load bootstrap4 %}
@@ -30,6 +31,7 @@
 
 {% block content %}
 {% endblock content %}
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
 </body>
 
 </html>
