--- a/CrowdFunding/projects/templates/projects/view.html
+++ b/CrowdFunding/projects/templates/projects/view.html
@@ -1,3 +1,51 @@
+{% extends 'home/base.html' %}
+{% load static %}
+{% block content %}
+<div class="container mt-2">
+    <div class="row">
+        <div class="col-6">
+            <div class="card" >
+                <div class="card-body">
+                  <h3 class="card-title">Title | {{project.title}}</h3>
+                  <p class="card-text">
+                    Details | {{project.details}} <br>
+                    category | {{category.name}} <br>
+                    Total Targe | {{project.total_target}} <br>
+                    Tags | {% for tag in tags %} {{tag.tag}} {% endfor %} <br>
+                  </p>
+                  <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
+                </div>
+            </div>
+            
+        </div>
+        <div class="col-6 ">
+            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                <ol class="carousel-indicators">
+                    {% for image in images %}
+                  <li data-target="#carouselExampleIndicators" data-slide-to="{{ forloop.counter0 }}" class="{% if forloop.counter0 == 0  %} active {%endif%}"></li>
+                  {% endfor %}
+                </ol>
+                <div class="carousel-inner">
+                    {% for image in images %}
+                    <div class="carousel-item {% if forloop.counter0 == 0  %} active {%endif%}">
+                        <img src="/media/{{image.image}}" class="img-fluid"  alt="">
+                    </div>
+                  {% endfor %}
+                </div>
+                <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Next</span>
+                </a>
+            </div>
+        </div>
+    </div>
+    
+
+
 <table border="1">
     <thead>
         <tr>
@@ -37,6 +85,7 @@
 
 
 </table>
+
 <a href="{% url 'new_comment' project.id %}">add comment</a>
 
 <table class="table" style="border: 1px solid;">
@@ -65,3 +114,5 @@
     {%endfor%}
 
 </table>
+</div>
+{% endblock %}
