feat-view-project-ui-enhancements

--- a/CrowdFunding/projects/static/projects/css/custom.css
+++ b/CrowdFunding/projects/static/projects/css/custom.css
@@ -12,3 +12,7 @@ div.carousel .carousel-inner .carousel-item img{
     width: 100vw;
     max-height: 20vw;
 }
+
+.checked {
+    color: orange;
+  }
