--- a/CrowdFunding/home/templates/home/base.html
+++ b/CrowdFunding/home/templates/home/base.html
@@ -9,6 +9,7 @@
 
     <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css"> 
     <link rel="stylesheet" type="text/css" href="{% static 'css/rating.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static '/projects/css/custom.css' %}">
