--- a/CrowdFunding/projects/templates/projects/edit.html
+++ b/CrowdFunding/projects/templates/projects/edit.html
@@ -17,7 +17,7 @@
                     <label for="">
                         Details
                     </label>
-                    <input class="form-control" type="text" name="details" value="{{ project_dict.details }}">
+                    <textarea class="form-control" name="details" value="{{project_dict.details}}" id="" cols="30" rows="3"></textarea>
                 </div>
                 <div class="form-group">
                     <label for="">
@@ -53,7 +53,7 @@
                 </div>
                 <div class="form-group">
                     <label for="">Images | select multiple image</label>
-                    <input class="form-control" type="file" name="images" accept="image/*" multiple>
+                    <input class="form-control-file" type="file" name="images" accept="image/*" multiple>
                 </div>
                 <div class="form-group">
                     <label for="">Tags</label>
