--- a/CrowdFunding/projects/templates/projects/edit.html
+++ b/CrowdFunding/projects/templates/projects/edit.html
@@ -17,7 +17,7 @@
                     <label for="">
                         Details
                     </label>
-                    <textarea class="form-control" name="details" value="{{project_dict.details}}" id="" cols="30" rows="3"></textarea>
+                    <textarea class="form-control" name="details" id="" cols="30" rows="3">{{project_dict.details}}</textarea>
                 </div>
                 <div class="form-group">
                     <label for="">
