Add (feat-Home-nav): homePage + navBar styling + user-auth

--- a/CrowdFunding/home/templates/category/new_category.html
+++ b/CrowdFunding/home/templates/category/new_category.html
@@ -1,4 +1,9 @@
-{% block content %}
+{% extends "home/base.html" %}
+
+{% load bootstrap4 %}
+
+
+{% block is_authenticated %}
 
 <form method="POST" novalidate>
     {% csrf_token %}
