--- a/CrowdFunding/home/templates/home/base.html
+++ b/CrowdFunding/home/templates/home/base.html
@@ -10,8 +10,7 @@
     <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css"> 
-    <link rel="stylesheet" type="text/css" href="{% static 'css/rating.css' %}">
-    <script src="{% static 'js/rating.js' %}"></script>
+
     <!-- project_page scripts end -->
     {% load bootstrap4 %}
     {% bootstrap_css %}
@@ -22,10 +21,16 @@
 <body>
     {% if request.user.is_authenticated %}
         {% include 'pusers/user_nav.html' with user=user%}
-         
+
+         {% block is_authenticated %}
+         {% endblock %}
+
     {% else %}
         {% include "home/default_nav.html" %}
-        
+        {% block not_authenticated %}
+        <h1> You aren't authenticated </h1>
+         {% endblock %}
+
     {% endif %}
 
 {% block content %}
