--- a/CrowdFunding/home/templates/home/index.html
+++ b/CrowdFunding/home/templates/home/index.html
@@ -57,7 +57,7 @@
     max-height: 20px;
     overflow: hidden;
     text-overflow: ellipsis;
-}
+
     margin-left: 35%;
     font-style: oblique;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -98,3 +98,122 @@ hr {
     
        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 {% endblock %}
+
+
+{% block is_authenticated %}
+
+
+<div class="row col-md-12 p-4">
+
+    <div class="row col-md-3 ">
+        <table class="table" style="border: 1px solid;">
+            <thead class="thead-dark">
+                <tr>
+                    <th>category</th>           
+                </tr>
+            </thead>
+            <tbody style="height: 230px; overflow-y: auto; display: block;">
+                {% for cat in all_category %}
+                <tr>    
+                    <td> {{ cat.name }} </td>
+                </tr>
+                {%endfor%}
+            </tbody>
+        </table>
+    </div>
+
+
+
+    <div class="row col-md-1 "></div>
+
+    <div class="row col-md-7 ">
+        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel"  style="margin: auto;">
+            <ol class="carousel-indicators">
+              {% for image in images%}
+              <li data-target="#carouselExampleIndicators" data-slide-to="{{ forloop.counter0 }}" class="{% if forloop.counter0 == 0  %} active {%endif%}"></li>
+              {% endfor %}
+
+            </ol>
+
+            
+            <div class="carousel-inner">
+                {% for image in images %}
+                <div class="carousel-item {% if forloop.counter0 == 0  %} active {%endif%}">
+                    <img src="/media/{{image.image}}" class="img-fluid"  alt="">
+              
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>{{image.project.title}}</h5>
+                        <a class="btn btn-primary" href="{% url 'viewProject' image.project.id %}">show details</a>
+                </div>
+                </div>
+              {% endfor %}
+            </div>
+           
+            
+
+            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div>
+    </div>
+</div>
+
+
+
+<br><br><br>
+<div class="container">
+    <table class="table table-bordered text-center">
+        <thead class="thead-dark">
+            <tr>
+                <th>title</th>
+                <th>details</th>
+                <th>category</th>
+                <th>total target</th>
+                <th>actions</th>
+            </tr>
+        </thead>
+
+        {% for project in latest_projects %}
+
+        <tr> 
+            <td>{{project.title}}</td>
+            <td>{{project.details}}</td>
+            <td>{{project.category.name}}</td>
+            <td>{{project.total_target}}</td>
+            <td>
+                <a href="{% url 'editProject' project.id %}">Edit</a>
+                <a href="{% url 'viewProject' project.id %}">View</a>
+                <a href="{% url 'deleteProject' project.id %}">Delete</a>
+                <a href="{% url 'create_report_project' project.id %}">Report</a>
+            </td>
+
+
+
+            
+        </tr>
+
+        {%endfor%}
+
+    </table>
+</div>
+
+
+
+{% endblock %}
+
+
+
+
+  <!-- .table-fixed tbody {
+    height: 230px;
+    overflow-y: auto;
+    width: 100%;
+  }
+  .table-fixed thead, .table-fixed tbody, .table-fixed tr, .table-fixed td, .table-fixed th {
+    display: block;
+  } -->
