--- a/CrowdFunding/projects/templates/projects/view.html
+++ b/CrowdFunding/projects/templates/projects/view.html
@@ -32,10 +32,12 @@
             </td>
             <td>
                 <a href="{% url 'create_report_project' project.id %}">Report</a>
-            </td>
-            <td>
                 <a href="{% url 'new_donate' project.id %}">Donate</a>
+                <a href="{% url 'new_rate' project.id %}">Rate</a>
+
+
             </td>
+
         </tr>
     </tbody>
 
@@ -80,4 +82,14 @@
 
 
 
-{% endblock %}
+
+<div>
+
+    <button type="submit" class="fa fa-star fa-3x my_btn  checked" value="1" id="st1"></button>
+    <button type="submit" class="fa fa-star fa-3x my_btn checked" value="2" id="st2"></button>
+    <button type="submit" class="fa fa-star fa-3x  my_btn checked" value="3" id="st3"></button>
+    <button type="submit" class="fa fa-star fa-3x my_btn checked" value="4" id="st4"></button>
+    <button type="submit" class="fa fa-star fa-3x my_btn " value="5" id="st5"></button>
+
+</div>
+{%endblock%}
