add total donate colum

--- a/CrowdFunding/projects/templates/projects/view.html
+++ b/CrowdFunding/projects/templates/projects/view.html
@@ -5,6 +5,7 @@
             <th>details</th>
             <th>category</th>
             <th>total target</th>
+            <th>total donate</th>
             <th>images</th>
             <th>Tags</th>
             <th>Action</th>
@@ -16,6 +17,7 @@
             <td>{{project.details}}</td>
             <td>{{category.name}}</td>
             <td>{{project.total_target}}</td>
+            <td>{{project.total_donate}}</td>
 
 
 
