auth pass bouns confirm + authenticate over all pages

--- a/CrowdFunding/comments/templates/edit_comment.html
+++ b/CrowdFunding/comments/templates/edit_comment.html
@@ -1,4 +1,7 @@
-{% block content %}
+{% extends 'home/base.html' %}
+{% load static %}
+{% block is_authenticated %}
+
 
 <form method="POST" novalidate>
     {% csrf_token %}
