--- a/CrowdFunding/projects/templates/projects/edit.html
+++ b/CrowdFunding/projects/templates/projects/edit.html
@@ -1,6 +1,6 @@
 {% extends 'home/base.html' %}
 {% load static %}
-{% block content %}
+{% block is_authenticated %}
 <div class="container mt-2">
     <h2>Edit Project ({{project_dict.title}})</h2>
     <div class="card my-3">
