--- a/CrowdFunding/projects/templates/projects/index.html
+++ b/CrowdFunding/projects/templates/projects/index.html
@@ -1,6 +1,6 @@
 {% extends 'home/base.html' %}
 {% load static %}
-{% block content %}
+{% block is_authenticated %}
 
 <div class="container mt-2">
     <h2>
