--- a/CrowdFunding/projects/templates/projects/add.html
+++ b/CrowdFunding/projects/templates/projects/add.html
@@ -1,6 +1,8 @@
 {% extends 'home/base.html' %}
 {% load static %}
-{% block content %}
+{% block is_authenticated %}
+
+         
 <div class="container mt-2">
     <h2>Add New Project</h2>
     <div class="card my-3">
