--- a/CrowdFunding/projects/templates/projects/view.html
+++ b/CrowdFunding/projects/templates/projects/view.html
@@ -1,6 +1,6 @@
 {% extends 'home/base.html' %}
 {% load static %}
-{% block content %}
+{% block is_authenticated %}
 <div class="container mt-2">
     <a href="{% url 'projects' %}" class="btn btn-primary mb-2">Back</a>
     <div class="row">
