--- a/CrowdFunding/pusers/templates/pusers/acc_active_email.html
+++ b/CrowdFunding/pusers/templates/pusers/acc_active_email.html
@@ -1,4 +1,8 @@
-{% autoescape off %}
-Hi {{ user.first_name }} {{ user.last_name }},
-Please click on the link to confirm your registration,http://{{ domain }}{% url 'pusers:activate' uidb64=uid time=time %}
-{% endautoescape %}
+
+
+    {% autoescape off %}
+        Hi {{ user.first_name }} {{ user.last_name }},
+        Please click on the link to confirm your registration,http://{{ domain }}{% url 'pusers:activate' uidb64=uid time=time %}
+        Best Regards, CrowdFunding Team 
+    {% endautoescape %}
+
