--- a/CrowdFunding/pusers/templates/pusers/login.html
+++ b/CrowdFunding/pusers/templates/pusers/login.html
@@ -1,7 +1,40 @@
 {% extends "home/base.html" %}
 {% block title %}Login{% endblock %}
 {% load bootstrap4 %}
-{% block content %}
+
+
+
+
+{% block not_authenticated %}
+
+              <div class="container">
+                <h1 class="text-center logo my-4">
+                
+                </h1>
+                <div class="row justify-content-center">
+                  <div class="col-lg-8 col-md-10 col-sm-12">
+                    <div class="card">
+                      <div class="card-body">
+                        <h3 class="card-title row justify-content-center">Login-Form</h3>
+                        <form method="post" novalidate>
+                          {% csrf_token %}
+                          {% include 'includes/form.html' %}
+                          <button type="submit" class="btn btn-primary btn-block">Login</button>
+                        </form>
+                      </div>
+                      <div class="card-footer text-muted text-center">
+                        Create New account <a href="{%url 'pusers:register'%}">Sign up </a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+{% endblock %}
+
+
+
+
 
 {% comment %} <div class="container" style="margin-top: 30px;">
     <form method="post" enctype="multipart/form-data">
@@ -16,30 +49,6 @@
 </div> {% endcomment %}
 
 
-<div class="container">
-    <h1 class="text-center logo my-4">
-      <a href="#">Crowd Funding SignIn</a>
-    </h1>
-    <div class="row justify-content-center">
-      <div class="col-lg-8 col-md-10 col-sm-12">
-        <div class="card">
-          <div class="card-body">
-            <h3 class="card-title row justify-content-center">Login</h3>
-            <form method="post" novalidate>
-              {% csrf_token %}
-              {% include 'includes/form.html' %}
-              <button type="submit" class="btn btn-primary btn-block">Login</button>
-            </form>
-          </div>
-          <div class="card-footer text-muted text-center">
-            Create New account <a href="{%url 'pusers:register'%}">Sign up </a>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
 
 
-
-{% endblock content %}
 
