--- a/CrowdFunding/pusers/templates/pusers/register.html
+++ b/CrowdFunding/pusers/templates/pusers/register.html
@@ -1,8 +1,8 @@
 {% extends "home/base.html" %}
 {% block title %}Register{% endblock %}
 {% load bootstrap4 %}
-{% block content %}
-<div class="container" style="margin-top: 30px;">
+{% block not_authenticated %}
+<!-- <div class="container" style="margin-top: 30px;">
     <form method="post" enctype="multipart/form-data">
         {%csrf_token%}
         {% bootstrap_form form %}
@@ -12,11 +12,40 @@
         </button>
         {% endbuttons %}
         <form>
-</div> 
+</div>  -->
 
+
+
+
+<div class="container">
+  <h1 class="text-center logo my-4">
+    
+  </h1>
+  <div class="row justify-content-center">
+    <div class="col-lg-8 col-md-10 col-sm-12">
+      <div class="card">
+        <div class="card-body">
+          <h3 class="card-title row justify-content-center">Register-Form</h3>
+          <form method="post" enctype="multipart/form-data">
+            {%csrf_token%}
+            {% bootstrap_form form %}
+            {% buttons %}
+            <button type="submit" class="btn btn-primary btn-block">
+                Sign Up
+            </button>
+            {% endbuttons %}
+            <form>
+        </div>
+        <div class="card-footer text-muted text-center">
+          Already have an account? <a href="{%url 'pusers:login'%}">Log in</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 {% comment %} <div class="container">
     <h1 class="text-center logo my-4">
-      <a href="#">Crowd Funding SignUp</a>
+      
     </h1>
     <div class="row justify-content-center">
       <div class="col-lg-8 col-md-10 col-sm-12">
@@ -37,7 +66,7 @@
     </div>
   </div> {% endcomment %}
 
-{% endblock content %}
+{% endblock  %}
 
 
   
