--- a/CrowdFunding/pusers/templates/pusers/signup_link_email.html
+++ b/CrowdFunding/pusers/templates/pusers/signup_link_email.html
@@ -1,20 +1,50 @@
 {% extends "home/base.html" %}
 {% block title %}Account Activation{% endblock %}
-{% block content %}
 
-<div class="container" style="margin-top: 30px;">
-    {%if active_code == 1%}
-    <h3>Thank you for your email confirmation. Now you can login your account.</h3>
-    {%elif active_code == 0 %}
-    <h3>Activation link is valid for 24 hours only a new link has been sent to your email...</h3>
-    {%elif active_code == -1 %}
-    <h3>Please confirm your email address to complete the registration</h3>
-    {%else %}
-    <h3>Activation link is invalid!</h3>
-    {%endif%}
-</div>
+
+{% load bootstrap4 %}
 
 
 
 
-{% endblock content %}
+{% block not_authenticated %}
+
+
+<div class="container">
+    <h1 class="text-center logo my-4">
+    
+    </h1>
+    <div class="row justify-content-center">
+      <div class="col-lg-8 col-md-10 col-sm-12">
+        <div class="card-header text-center">
+            <h3 class="card-title row justify-content-center">Mail-Server-Acknowledgement</h3>
+          </div>
+        <div class="card">
+          <div class="card-body text-center">
+            
+            {%if active_code == 1%}
+            <h3>Thank you for your email confirmation. Now you can login your account.</h3>
+            {%elif active_code == 0 %}
+            <h3>Activation link is valid for 24 hours only a new link has been sent to your email...</h3>
+            {%elif active_code == -1 %}
+            <h3>Please confirm your email address to complete the registration</h3>
+            {%else %}
+            <h3>Activation link is invalid!</h3>
+            {%endif%}
+          </div>
+          <div class="card-footer text-muted text-center">
+            Back to <a href="{% url 'index' %}">Home</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+   
+
+
+
+
+
+{% endblock  %}
