--- a/CrowdFunding/reports/templates/reports/create_comment.html
+++ b/CrowdFunding/reports/templates/reports/create_comment.html
@@ -1,4 +1,7 @@
-{% block content %}
+{% extends 'home/base.html' %}
+{% load static %}
+{% block is_authenticated %}
+
 
 <form action="{% url 'create_report_comment' projectId commentId %}" method="post">
     {% csrf_token %}
@@ -6,4 +9,4 @@
     <button type="submit">Report </button>
 </form>
 
-{% endblock content %}
+{% endblock  %}
