feature-show-my-project-page

--- a/CrowdFunding/pusers/templates/pusers/user_nav.html
+++ b/CrowdFunding/pusers/templates/pusers/user_nav.html
@@ -39,7 +39,7 @@
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                 <a class="dropdown-item" href="{% url 'pusers:profile' %}">My-Profile</a>
-                <a class="dropdown-item" href="#">My-Projects</a>
+                <a class="dropdown-item" href="{% url 'myProjects' %}">My-Projects</a>
                 <a class="dropdown-item" href="#">My-Donates</a>
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item" href="{% url 'pusers:logout' %}">Logout</a>
