add style for report

--- a/CrowdFunding/reports/templates/reports/create_project.html
+++ b/CrowdFunding/reports/templates/reports/create_project.html
@@ -3,10 +3,20 @@
 {% block is_authenticated %}
 
 
-
-<form action="{% url 'create_report_project' projectId  %}" method="post">
+<div class="container d-flex justify-content-center">
+<form action="{% url 'create_report_project' projectId  %}"  class="post-form" method="post">
     {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Report</button>
-</form>
+    <div class="form-group">
+         {{ form.as_p }}
+    </div>
+
+
+    <button  class="btn btn-primary" type="submit">Report</button>
+</form></div>
+
+
+
+
+
 {% endblock  %}
+
