--- a/CrowdFunding/projects/templates/projects/view.html
+++ b/CrowdFunding/projects/templates/projects/view.html
@@ -79,12 +79,12 @@
 
 
 
-                <h3>Total Rate | <span class="fa fa-star checked"> </span>
+                <h3 >Total Rate | <span class="fa fa-star checked"> </span>
                     <span class="fa fa-star checked"></span>
                     <span class="fa fa-star checked"></span>
                     <span class="fa fa-star"></span>
                     <span class="fa fa-star"></span>
-                    <span class="">{{test.0.average_rating}} </span>
+                    <span class="">{{rate_of_project.0.average_rating}} </span>
                 </h3>
             </div>
             <div style="margin-left:5%;">
@@ -387,3 +387,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
         integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
         crossorigin="anonymous"></script>
+
+
+
