Add(feat-dev-home): user-auth-resetPass + changePass + category style

--- a/CrowdFunding/pusers/templates/pusers/login.html
+++ b/CrowdFunding/pusers/templates/pusers/login.html
@@ -24,6 +24,7 @@
                       </div>
                       <div class="card-footer text-muted text-center">
                         Create New account <a href="{%url 'pusers:register'%}">Sign up </a>
+                        &emsp; <a href="{% url 'password_reset'%}">Forget your Password ?</a>                    
                       </div>
                     </div>
                   </div>
