--- a/CrowdFunding/pusers/templates/pusers/user_nav.html
+++ b/CrowdFunding/pusers/templates/pusers/user_nav.html
@@ -42,7 +42,10 @@
                 <a class="dropdown-item" href="#">My-Projects</a>
                 <a class="dropdown-item" href="#">My-Donates</a>
                 <div class="dropdown-divider"></div>
+                <a class="dropdown-item"  href="{% url 'password_reset'%}">Reset your Password</a>                    
+                <a class="dropdown-item"  href="{% url 'password_change'%}">Change your Password</a>   
                 <a class="dropdown-item" href="{% url 'pusers:logout' %}">Logout</a>
+
             </div>
         </h5>
         <img src="{{request.user.photo.url}}" alt="" width="50px" height="50px" style="margin-right: 10px; border-radius: 50%;"/>
