final merge to highest-rate-branch

--- a/CrowdFunding/projects/templates/projects/view.html
+++ b/CrowdFunding/projects/templates/projects/view.html
@@ -169,7 +169,7 @@
 
 
 <!--      MODAL FOR COMMENT           -->
-                <div class="modal fade" id="#s{{comm.id}}" tabindex="-1" aria-labelledby="exampleModalLabelll" aria-hidden="true">
+                <div class="modal fade" id="s{{comm.id}}" tabindex="-1" aria-labelledby="exampleModalLabelll" aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header">
