feat: my donate

--- a/CrowdFunding/projects/templates/projects/view.html
+++ b/CrowdFunding/projects/templates/projects/view.html
@@ -226,6 +226,9 @@
 </div>
 
     <div class="row">
+        <h2>
+            Related Projects
+        </h2>
         {% for images in related_projects_images %}
         <div class="col-md-3 col-12">
             <div class="card">
